test/corpus/import.txt
==============================
no imported values
===============================

import foo ()

---

(source_file
  (import
    moduleName: (identifier)))


===============================
universal import
===============================

import foo

---

(source_file
  (import
    moduleName: (identifier)))


===============================
specific values
===============================

import foo (a, b as c)

---

(source_file
  (import
    moduleName: (identifier)
    (importTerm
      name: (identifier))
    (importTerm
      name: (identifier)
      alias: (identifier))))
