test/corpus/modules.txt
==============================
no exported values
===============================

module foo ()

---

(source_file
  (module
    modulePath: (modulePath
      segment: (identifier))))


===============================
universal export
===============================

module foo (*)

---

(source_file
  (module
    modulePath: (modulePath
      segment: (identifier))
    (star)))


===============================
multiple export
===============================

module foo
 ( a
 , b
 )

---

(source_file
  (module
    modulePath: (modulePath
      segment: (identifier))
    (identifier)
    (identifier)))



===============================
multi-segment module paths
===============================

module lib (a)
module lib.foo (a)
module lib.foo.bar (a)

---

(source_file
  (module
    modulePath: (modulePath
      segment: (identifier))
    (identifier))
  (module
    modulePath: (modulePath
      segment: (identifier)
      segment: (identifier))
    (identifier))
  (module
    modulePath: (modulePath
      segment: (identifier)
      segment: (identifier)
      segment: (identifier))
    (identifier)))
