test/corpus/signature.txt
===============================
id a :: a -> a
===============================

id a :: a -> a

---

(source_file
  (signature
    name: (identifier)
    arg: (identifier)
    value: (functionT
      generic: (identifier)
      generic: (identifier))))


===============================
map a b :: (a -> b) -> [a] -> [b]
===============================

map a b :: (a -> b) -> [a] -> [b]

---

(source_file
  (signature
    name: (identifier)
    arg: (identifier)
    arg: (identifier)
    value: (functionT
      (functionT
        generic: (identifier)
        generic: (identifier))
      (listType
        generic: (identifier))
      (listType
        generic: (identifier)))))


===============================
foo :: A -> A B -> C
===============================

foo :: A -> A B -> C

---

(source_file
  (signature
    name: (identifier)
    value: (functionT
      concrete: (identifierU)
      (paramT
        concrete: (identifierU)
        concrete: (identifierU))
      concrete: (identifierU))))
