test/corpus/source.txt
==============================
source nothing
===============================

source Py ()

---

(source_file
  (source
    language: (identifierU)))


==============================
source from builtins
===============================

source Py ("map" as m, "sum")

---

(source_file
  (source
    language: (identifierU)
    (sourceTerm
      name: (string)
      alias: (identifier))
    (sourceTerm
      name: (string))))


===============================
source from file
===============================

source Py from "foo.py" ("foo")

---

(source_file
  (source
    language: (identifierU)
    sourceFile: (string)
    (sourceTerm
      name: (string))))
